# ktype

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: kern_mvp.md
docs/plans/: 2026-05-16-duration-selector.md  2026-05-16-phase3-timer-results.md  2026-05-17-phase6-testing.md  2026-05-17-phase7-oss-release.md
docs/specs/: 2026-05-16-phase3-timer-results-design.md  2026-05-16-phase6-testing-design.md  2026-05-17-phase7-oss-release-design.md
src/: app.rs  cli.rs  commands.rs  config.rs  generator.rs  input.rs  integration_tests.rs  lib.rs  main.rs  metrics.rs  model.rs  msg.rs  persistence.rs  update.rs  view.rs
src/config/: mod.rs  theme.rs
src/domain/: metrics.rs  mod.rs  model.rs  msg.rs  test_config.rs  update.rs
src/generator/: mod.rs  word_list.rs
src/io/: commands.rs  mod.rs  persistence.rs  stats.rs
src/snapshots/: kern__view__tests__results_screen_snapshot.snap  kern__view__tests__running_elapsed_5s.snap  kern__view__tests__running_elapsed_zero.snap  kern__view__tests__typing_screen_snapshot.snap  kern__view__tests__typing_screen_waiting_snapshot.snap  ktype__view__tests__caret_underline.snap  ktype__view__tests__duration_15s.snap  ktype__view__tests__duration_30s.snap  ktype__view__tests__duration_60s.snap  ktype__view__tests__idle_screen_update_banner_snapshot.snap  ktype__view__tests__idle_wide_terminal.snap  ktype__view__tests__modal_time.snap  ktype__view__tests__modal_words.snap  ktype__view__tests__results_screen_snapshot.snap  ktype__view__tests__results_screen_with_chart_snapshot.snap  ktype__view__tests__running_elapsed_5s.snap  ktype__view__tests__running_elapsed_zero.snap  ktype__view__tests__typing_screen_snapshot.snap  (+3 more)
src/ui/: char_state.rs  chart.rs  (+5 more)
(+21 files in other folders)
