[package]
name = "kern"
version = "0.1.0"
edition = "2024"
description = "A terminal-native typing test inspired by Monkeytype — fast, minimal, and offline-first."
license = "MIT"
repository = "https://github.com/hansonguyen/kern"
homepage = "https://github.com/hansonguyen/kern"
keywords = ["typing", "terminal", "wpm", "tui", "monkeytype"]
categories = ["command-line-utilities"]
exclude = [".github", "docs"]

[[bin]]
name = "kern"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
proptest = "1.11"
insta = { version = "1.47", features = ["yaml"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
