[package]
name = "ktype"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "A terminal-native typing test inspired by Monkeytype — fast, minimal, and offline-first."
license = "MIT"
repository = "https://github.com/hansonguyen/ktype"
homepage = "https://github.com/hansonguyen/ktype"
keywords = ["typing", "terminal", "wpm", "tui", "monkeytype"]
categories = ["command-line-utilities"]
exclude = [".github", "docs"]

[[bin]]
name = "ktype"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
update-informer = "1"

[dev-dependencies]
proptest = "1.11"
insta = { version = "1.47", features = ["yaml"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
